# py-rawports

./: .gitignore  README.md  pyproject.toml  setup.py  version.env  打包说明.md
scripts/bat/: build-pip-local.bat  build-pip-venv.bat  install-dev.bat  prebuild.bat  uninstall.bat  upload2pypi.bat  upload2testpypi.bat  version.bat
scripts/shell/: build-pip-local.sh  build-pip-venv.sh  install-dev.sh  prebuild.sh  uninstall.sh  upload2pypi.sh  upload2testpypi.sh  version.sh
src/composite-comm/: __init__.py
src/composite-comm/transports/: Sock.py
src/composite_comm/: Composite.py  transport.py
src/composite_comm/interfaces/: Socket.py
src/composite_comm/transports/: Socket.py
src/py_rawports/: transport.py
src/py_rawports/examples/: FileDescriptor.py  FileIO.py  Serial.py  Socket.py  USB.py
src/py_rawports/interfaces/: FileDescriptor.py  FileIO.py  Serial.py  Socket.py  USB.py
