[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_rawports"
keywords = ["communicate", "USB", "socket", "serial", "fileio", "filedescriptor"]
dynamic = ["version"]
authors = [{ name = "ThankVinci", email = "thankvinci@163.com" }]
description = "A composite interface for sending raw data."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = ["libusb-package==1.0.26.3", "pyusb==1.2.1", "pyserial==3.5"]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages]
find = { where = ["./src"] } 

[project.urls]
Homepage = "https://github.com/ThankVinci/py-rawports"
Repository = "https://github.com/ThankVinci/py-rawports.git"